add UDPStream, UDPRequest, UDPResponse, SimpleAsyncClient, SimpleUDPClient

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,18 @@
 *.pyc
 *.swp
 *.swo
+*.log
+new_stack.py
+nonblockudp.py
+slogger.py
+ssl_stream.py
+udpsock.py
+tclient.py
 build/
 .directory/
 .idea/
 .venv/
+trash/
 dist/
 README
 MANIFEST
